gccida/c3/_cpp_lex_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1267:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * cpp_lex_token( cpp_reader_0 *pfile) 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1267:36: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
const cpp_token_0 * cpp_lex_token( cpp_reader_0 *pfile) 
                                   ^~~~~~~~~~~~
                                   cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1269:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *cur_token; // r14 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1270:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *cur_run; // r15 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1273:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *next; // rax 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1274:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *v6; // r14 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1275:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *v7; // rax 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1276:23: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void ( *line_change)( cpp_reader_0 *, const cpp_token_0 *, int); // rax 
                      ^~~~~~~~~~~~
                      cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1276:45: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
void ( *line_change)( cpp_reader_0 *, const cpp_token_0 *, int); // rax 
                                            ^~~~~~~~~~~
                                            cpp_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1287:20: error: expected expression
v6 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1287:8: error: use of undeclared identifier 'tokenrun_0'
v6 = ( tokenrun_0 *)xmalloc( 0x20uLL); 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1290:21: error: expected expression
v7 = ( cpp_token_0 *)xmalloc( 0x1770uLL); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1290:8: error: use of undeclared identifier 'cpp_token_0'; did you mean 'cur_token'?
v7 = ( cpp_token_0 *)xmalloc( 0x1770uLL); 
       ^~~~~~~~~~~
       cur_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/cpplex.c:1269:14: note: 'cur_token' declared here
cpp_token_0 *cur_token; // r14 
             ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/_cpp_lex_token/src/obj/cpplex.o] Error 1
